--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,20 @@
 	position: relative;
 }
 
+.content__link {
+  outline: none;
+  background-color: transparent;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  margin-top: 5rem;
+  font-family: 'Poppins', sans-serif;
+  letter-spacing: -0.025em;
+  font-size: 1.5rem;
+  padding: 10px 45px;
+  border: 2px solid white;
+}
+
 .content__title::before,
 .content__title::after {
 	content: '';
@@ -44,59 +58,4 @@
 		height: 100px;
 		background-size: 12px;
 	}
-}
-
-/* GRID */
-
-.grid {
-	padding: 20vh 0;
-	max-width: 1000px;
-	display: grid;
-	grid-row-gap: 20vh;
-	grid-template-columns: repeat(2, 1fr);
-}
-
-.grid__item {
-	position: relative;
-}
-
-.grid__item-titlewrap {
-	bottom: 10%;
-	position: absolute;
-}
-
-.grid__item-title {
-	font-size: 8vw;
-	line-height: 1;
-	margin: 0;
-}
-
-.grid__item-description {
-	margin: 0;
-	font-size: 1.5rem;
-}
-
-.grid__item:nth-child(odd) {
-	align-self: start;
-}
-
-.grid__item:nth-child(odd) .grid__item-titlewrap {
-	right: -5vw;
-}
-
-.grid__item:nth-child(even) {
-	margin: 70vh 0 0 0;
-}
-
-.grid__item:nth-child(even) .grid__item-titlewrap {
-	left: -5vw;
-}
-
-.scroll-img {
-	width: 500px;
-	max-width: 100%;
-	height: 50vh;
-	min-width: 250px;
-	min-height: 250px;
-	background-size: cover;
 }
